Pack the schema into the generators artifact. Publish the generators artifact to github packages.